RESOLVED FIXED145538
[iOS] Hardware Keyboard: All combinations for arrow keys with Shift do not extend the selection
https://bugs.webkit.org/show_bug.cgi?id=145538
Summary [iOS] Hardware Keyboard: All combinations for arrow keys with Shift do not ex...
Enrica Casucci
Reported 2015-06-01 17:44:45 PDT
The shift key is completely ignored in all the arrow key commands. rdar://problem/18504199
Attachments
Patch (6.42 KB, patch)
2015-06-01 17:59 PDT, Enrica Casucci
darin: review+
Enrica Casucci
Comment 1 2015-06-01 17:59:08 PDT
Enrica Casucci
Comment 2 2015-06-01 18:27:50 PDT
Committed revision 185092.
Note You need to log in before you can comment on or make changes to this bug.