[iOS] Hardware Keyboard: All combinations for arrow keys with Shift do not extend the selection. https://bugs.webkit.org/show_bug.cgi?id=145538 rdar://problem/18504199

Reviewed by Darin Adler.

The extend parameter was ignored in all the functions below.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _moveUp:withHistory:]):
(-[WKContentView _moveDown:withHistory:]):
(-[WKContentView _moveLeft:withHistory:]):
(-[WKContentView _moveRight:withHistory:]):
(-[WKContentView _moveToStartOfWord:withHistory:]):
(-[WKContentView _moveToStartOfParagraph:withHistory:]):
(-[WKContentView _moveToStartOfLine:withHistory:]):
(-[WKContentView _moveToStartOfDocument:withHistory:]):
(-[WKContentView _moveToEndOfWord:withHistory:]):
(-[WKContentView _moveToEndOfParagraph:withHistory:]):
(-[WKContentView _moveToEndOfLine:withHistory:]):
(-[WKContentView _moveToEndOfDocument:withHistory:]):



Canonical link: https://commits.webkit.org/163577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185092 268f45cc-cd09-0410-ab3c-d52691b4dbfc